# sudo

./: CMakeLists.txt  Main.qml  README.md  main.cpp
elements/core_apps/: Terminal.qml
elements/core_components/: BaseWindow.qml
elements/core_screens/: Desktop.qml  Splash.qml
screens/: Desktop.qml  Splash.qml
src/: definitions.cpp  definitions.h
src/bridges/terminal/: terminalbridge.cpp  terminalbridge.h
src/interpreter/: interpreter.cpp  interpreter.h
src/interpreter/core/: core.cpp  core.h
src/interpreter/filesystem/: filesystem.cpp  filesystem.h
src/interpreter/info/: info.cpp  info.h
src/interpreter/logic/: logic.cpp  logic.h
src/interpreter/math/: math.cpp  math.h
src/kernel/: kernel.cpp  kernel.h
